# EdgeTPUOnModernRPIs

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
examples/: basic_inference.py  embedding_extraction.py  generate_report.py  multi_client.py  picamera2_detection.py  picamera2_embedding.py  picamera2_inference.py  picamera2_pose.py  pipeline_inference.py  robust_inference.py
scripts/: sync_service.py
src/rpi_edgetpu/: __init__.py  cli.py  client.py  service.py
src/rpi_edgetpu/templates/: edgetpu.service
